fix issues with overflowing fit-text when exporting to pdf #3191 #3120

--- a/css/print/pdf.scss
+++ b/css/print/pdf.scss
@@ -96,10 +96,6 @@ html.print-pdf {
 		min-height: auto !important;
 	}
 
-	.reveal .r-fit-text {
-		white-space: normal !important;
-	}
-
 	.reveal img {
 		box-shadow: none;
 	}
